2004-03-24 01:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: [GormDocument attachObject:toParent:] changes
	to improve adding a new menu, if the main menu has been removed.
	* GormPalettesManager.m: [GormPaletteView draggedImage:endedAt:
	deposited:] added code to allow copying of menus in a similar
	fashion to windows.
	
2004-03-23 22:01 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m: Added code to recursivly
	add all of the items and submenus to the document.
	* Palettes/0Menus/main.m: Added code to allow user to drag a new
	menu to the document.
	* Palettes/0Menus/GormMenuDrag.tiff: Image for menu to drag
	* Images/GormMenu.tiff: New image.
	
2004-03-21 23:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.[hm]: added [GormDocument _instantiateFontManager] 
	method to create the font manager when something requiring one 
	is added.  Other additions to the header to add the font manager
	functionality.   Removed declaration and references to old 
	GormFontManager class.  Modified attachObject:toParent: to properly
	detect when a menu item is being added which needs the font manager.
	* GormObjectProxy.m: Added implementation of imageForViewer
	to show a font manager icon, if the object is a NSFontManager or
	some subclass.
	* GormObjectEditor.m: Minor cleanup.
	
2004-03-21 10:27 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.[hm]: Initial code changes for new FontManager.
	Added code in [GormDocument attachObject:] to update the connection
	correctly.   Previously the connection were not being created correctly
	which require the user to disconnect the existing connection and 
	reconnect.
	* GormObjectEditor.m: Removed the check for NSFont as an object which
	can't be removed.   It will be possible to remove it once it has no
	connections.
	* Palettes/0Menus/main.m: Updated some of the connections here so