@@ -1,3 +1,10 @@
+2004-03-24 15:36 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/GormMenuEditor.m: Minor cleanup which prevents
+	menu from being dragged into a menu.
+	* GormDocument.[hm]: Cleanup of reference to class GormProxyObject.
+	Should have been GormObjectProxy.  Minor issue.
+	
 2004-03-24 01:00 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormDocument.m: [GormDocument attachObject:toParent:] changes
